# splurt

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  Makefile.in  PKGBUILD  README.md  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  splurt.c  splurt.h
